--- a/yeb-server/src/resources/config/application.yml
+++ b/yeb-server/src/resources/config/application.yml
@@ -32,7 +32,6 @@ spring:
       filter:
         enabled: true
 
-
   redis:
    timeout: 10000ms
    host: localhost
@@ -47,6 +46,9 @@ spring:
        # 最大空闲连接
        max-idle: 200
        min-idle: 5
+  aop:
+    auto: true
+    proxy-target-class: true
 
 # mybatis-plus配置
 mybatis-plus:
