--- a/yeb-util/pom.xml
+++ b/yeb-util/pom.xml
@@ -27,5 +27,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
