--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <!--easy-poi-->
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-spring-boot-starter</artifactId>
+            <version>4.1.3</version>
+        </dependency>
 
     </dependencies>
 </project>
