--- a/yeb-ui/package.json
+++ b/yeb-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yeb-front",
+  "name": "yeb-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,16 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
