--- a/yeb-ui/package.json
+++ b/yeb-ui/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
     "font-awesome": "^4.7.0",
+    "js-file-download": "^0.4.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
