--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -103,5 +103,10 @@
             <version>4.1.3</version>
         </dependency>
 
+        <!--websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 </project>
