准备：邮件模块开发，使用rabbitmq发送邮件

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <module>yeb-server</module>
         <module>yeb-generator</module>
         <module>yeb-util</module>
+        <module>yeb-email</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
