--- a/yeb-email/src/main/resources/application.yml
+++ b/yeb-email/src/main/resources/application.yml
@@ -1,7 +1,51 @@
 sever:
-  port: 8082
+  port: 18082
 
 spring:
+  # 数据源配置
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://39.107.102.32:3306/yeb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    username: mysql
+    password: mysql
+    hikari:
+      # 连接池名
+      pool-name: DateHikariCP
+      # 最小空闲连接数
+      minimum-idle: 5
+      # 空闲连接存活最大时间，默认60000（10分钟）
+      idle-timeout: 1800000
+      # 最大连接数，默认10
+      maximum-pool-size: 10
+      # 从连接池返回的连接的自动提交
+      auto-commit: true
+      # 连接最大存活时间，0表示永久存活，默认1800000（30分钟）
+      max-lifetime: 1800000
+      # 连接超时时间，默认30000（30秒）
+      connection-timeout: 30000
+      # 测试连接是否可用的查询语句
+      connection-test-query: SELECT 1
+  redis:
+    timeout: 10000ms
+    host: 39.107.102.32
+    port: 6379
+    database: 0
+    password: root
+    lettuce:
+      pool:
+        # 最大连接
+        max-active: 1024
+        max-wait: 10000ms
+        # 最大空闲连接
+        max-idle: 200
+        min-idle: 5
+  aop:
+    auto: true
+    proxy-target-class: true
+
+
+
+
   # 邮件配置
   mail:
     host: smtp.163.com
@@ -20,3 +64,20 @@ spring:
     host: 39.107.102.32
     port: 5672
 
+
+# Mybatis SQL 打印（方法接口所在的包）
+logging:
+  level:
+    org.feng.server.mapper: debug
+
+
+
+jwt:
+  # JWT存储的请求头
+  tokenHeader: Authorization
+  # JWT 加解密使用的密钥
+  secret: yeb-secret
+  # JWT的超期限时间（60*60*24）
+  expiration: 604800
+  # JWT 负载中拿到开头
+  tokenHead: Bearer
